--- a/Gamu/README
+++ b/Gamu/README
@@ -7,3 +7,23 @@ I shall do Battle stuff
 Trinity do story
 make it so it'll make sense for him to crawl dungeons
 Front End
+
+Things needed: 
+Inventory
+{
+Weapons
+{
+Swords
+Staffs 
+Daggers
+}
+Potions 
+Defense 
+Accessories 
+}
+Rooms 
+Battle System
+{
+Magic System
+}
+Story 
